# UniCode

./: language.cabal  stack.yaml
code_examples/: engine_syntax_list.txt  factorial.xyz  interpreter_example.xyz  interpreter_example_tree.txt  scopes.xyz  shooter.xyz  snake.xyz  syntax_list.txt
lib/: Interpreter.hs  Store.hs
